@@ -25,6 +25,7 @@
   * Devise.orm is deprecated, just require "devise/orm/YOUR_ORM" instead.
   * Devise.default_url_options is deprecated, just modify ApplicationController.default_url_options.
   * All messages under devise.sessions, except :signed_in and :signed_out, should be moved to devise.failure.
+  * :as and :scope in routes is deprecated. Use :path and :singular instead.
 
 == 1.0.6
 
